Store provider as GenAIProvider enum in settings; make provider selection use enum list\n\nCo-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>